<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_black"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <!-- ========================= -->
        <!-- Logo -->
        <!-- ========================= -->

        <LinearLayout
            android:id="@+id/tvLogoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="Logo"
                android:src="@drawable/ic_logo_mark"
                app:tint="#FFFFFF" />

            <TextView
                android:id="@+id/tvLogoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingMultiplier="0.9"
                android:text="digital\ngrading\ncompany"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_size_large" />

        </LinearLayout>


        <com.example.test.ui.components.CustomInputView
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="56dp" />

        <com.example.test.ui.components.CustomInputView
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="16dp" />


        <!-- ========================= -->
        <!-- Continue Button -->
        <!-- ========================= -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/color_main_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            app:cornerRadius="100dp" />


        <!-- ========================= -->
        <!-- Sign Up -->
        <!-- ========================= -->

        <TextView
            android:id="@+id/toSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/toSignup_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />


        <!-- ========================= -->
        <!-- Terms -->
        <!-- ========================= -->

        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:text="@string/sign_up_bottom_text"
            android:textColor="@color/text_color_light"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>